Added Twitter/Linkedin previews

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,19 @@
 <!--  <base href="$FLUTTER_BASE_HREF">-->
   <base href="/">
 
+  <!-- Tags for Previews in Linkedin -->
+  <meta name="title" property="og:title" content="Dmytro Gladkyi's Profile on #MetaPersona">
+  <meta property="og:type" content="website">
+  <meta name="image" property="og:image" content="https://dmytrogladkyi.com/icons/apple-icon.png">
+  <meta name="description" property="og:description" content="Personal site of Dmytro Gladkyi. Hosted by the #MetaPersona Flutter 💙🕸 Engine">
+  <meta name="author" content="Dmytro Gladkyi">
+
+  <!-- Tags for Previews in Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@DmytroGladkyi" />
+  <meta name="twitter:image" content="https://dmytrogladkyi.com/icons/apple-icon.png" />
+  <meta name="twitter:description" content="Personal site of Dmytro Gladkyi. Hosted by the #MetaPersona Flutter 💙🕸 Engine" />
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Dmytro Gladkyi Meta Persona Profile">
