--- a/web/index.html
+++ b/web/index.html
@@ -18,16 +18,18 @@
   <base href="/">
 
   <!-- Tags for Previews in Linkedin -->
-  <meta name="title" property="og:title" content="Dmytro Gladkyi's Profile on #MetaPersona">
+  <meta name="title" property="og:title" content="Dmytro Gladkyi's Profile">
   <meta property="og:type" content="website">
   <meta name="image" property="og:image" content="https://dmytrogladkyi.com/icons/apple-icon.png">
   <meta name="description" property="og:description" content="Personal site of Dmytro Gladkyi. Hosted by the #MetaPersona Flutter 💙🕸 Engine">
   <meta name="author" content="Dmytro Gladkyi">
 
   <!-- Tags for Previews in Twitter -->
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dmytro Gladkyi on #MetaPersona" />
   <meta name="twitter:creator" content="@DmytroGladkyi" />
-  <meta name="twitter:image" content="https://dmytrogladkyi.com/icons/apple-icon.png" />
+  <meta name="twitter:url" content="https://dmytrogladkyi.com" />
+  <meta name="twitter:image" content="https://dmytrogladkyi.com/icons/avatar_green.jpg" />
   <meta name="twitter:description" content="Personal site of Dmytro Gladkyi. Hosted by the #MetaPersona Flutter 💙🕸 Engine" />
 
   <meta charset="UTF-8">
