--- a/web/index.html
+++ b/web/index.html
@@ -59,6 +59,15 @@
 
   <title>Dmytro Gladkyi Meta Persona Profile</title>
   <link rel="manifest" href="manifest.json">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDK42WF30P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CDK42WF30P');
+    </script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
