--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="metapersona">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
@@ -41,7 +40,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <link rel="icon" type="image/png" href="icons/favicon.ico"/>
 
-  <title>metapersona</title>
+  <title>Dmytro Gladkyi Meta Persona Profile</title>
   <link rel="manifest" href="manifest.json">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDK42WF30P"></script>
