--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Tags for Previews in Linkedin -->
   <meta name="title" property="og:title" content="Dmytro Gladkyi's Profile">
   <meta property="og:type" content="website">
